# free_tube

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
src/: main.py
src/tube_scrapy/: scraped_video_info.py  tube_scrapy.py
src/tube_scrapy_defreitasabner/: tube_scrapy.py
tube_scrapy/: test_tube_scrapy.py
